# Fingerprint-flow

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LESSONS_LEARNED.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Docs/API Links/: README.md
Docs/adr/: 0001-tech-stack.md  0002-confidence-scoring.md
config/: config.example.yaml
src/: __init__.py  main.py
src/core/: __init__.py  archive_org_fetcher.py  batch_processor.py  compilation_detector.py  confidence_scorer.py  dj_screw_handler.py  file_organizer.py  fingerprinter.py  fuzzy_matcher.py  metadata_fetcher.py  report_writer.py  scanner.py  tag_editor.py
src/db/: __init__.py  database.py  repositories.py
src/gui/: __init__.py  app.py  worker.py
src/gui/styles/: __init__.py  stylesheets.qss  theme.py
src/gui/views/: __init__.py  import_view.py  library_view.py  preview_view.py  review_view.py  scan_progress_view.py  settings_view.py
src/gui/widgets/: __init__.py  album_art_viewer.py  confidence_badge.py  match_selector.py  search_bar.py  track_card.py
src/models/: __init__.py  config.py  match_result.py  processing_state.py  track.py
src/utils/: __init__.py  constants.py  file_utils.py  logger.py  rate_limiter.py
tests/: test_compilation_detector.py  test_config_validation.py  test_dj_screw_handler.py  test_file_organizer.py  test_file_utils.py  test_fuzzy_matcher.py  test_rate_limiter.py  test_report_writer.py  test_tag_editor.py
